2010-01-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Split dist, build and install for binutils.

	* deploy/common.mk,
	* deploy/dist-common.mk: New.

	* deploy/layout.mk.defaults: Simplify.
	* deploy/rules/binutils.mk: Simplify. Move fetch rules to ...
	* deploy/binutils-dist.mk: ...here. Generate archive.

	* deploy/Makefile,
	* deploy/versions.mk: Update accordingly.

2010-01-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update patches for SystemC.

	* deploy/patches/sysc.patch: More tweaks to quiet compiler
	warnings with gcc 4.4.

	* deploy/sysc/do_diff.sh: Also exclude autom4te's cache and
	temporary files.

2010-01-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* deploy/versions.mk.defaults: Bump version numbers. 
 
2010-01-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Deploy MGSim and SLC with meaningful version numbers.

	* deploy/rules/mgsim.mk,
	* deploy/rules/sl.mk: Use `svn co' instead of `export' so that the
	SVN revision can be embedded in the version number.

2009-12-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* bootstrap: Use the new generation scripts in
	`programs/benchmarks'.

2009-12-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* deploy/versions.mk.defaults: Bump version numbers. 

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix deployment of MGSim.
	
	* deploy/rules/mgsim.mk: Remove objects for "main.o" before
	compiling, to force reconfiguration of the config file location.

2009-11-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix `SystemC' some more.
	
	* deploy/patches/sysc.patch: Minor build fix.
	
	* deploy/rules/sc.mk: Try building with pthreads first.

2009-11-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* deploy/versions.mk.defaults: Bump version numbers.

2009-11-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* Makefile.am: Distribute the new files in `deploy'.

2009-11-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix `SystemC' some more.
	