@@ -2,3 +2,4 @@ SVN = svn
 BASE_REPO = https://svn.svp-home.org
 
 BINUTILS_REPO = $(BASE_REPO)/sw/svp/mg/binutils/trunk
+M4_REPO = git://git.sv.gnu.org/m4
