@@ -24,8 +24,8 @@ GCC_VERSION = 4.4.2
 GCC_ARCHIVE = gcc-core-$(GCC_VERSION).tar.bz2
 GCC_MIRROR = ftp://ftp.nluug.nl/mirror/languages/gcc/releases/gcc-$(GCC_VERSION)
 
-M4_VERSION = 1.6
-M4_REPO = git://git.sv.gnu.org/m4
+M4_VERSION = 1.5.89a.154-7dc4-dirty
+M4_ARCHIVE = $(DISTDIR)/m4-$(M4_VERSION).tar.bz2
 
 TX_VERSION = 2.5.3
 TX_ARCHIVE = tinyxml_$(subst .,_,$(TX_VERSION)).zip
